replacing files and making changes to readme and package.json

--- a/components/Chips/Chips.module.css
+++ b/components/Chips/Chips.module.css
@@ -7,40 +7,40 @@
   border-radius: 5px;
   margin: 7px;
   flex: 0 0 auto;
+  transition: background-color 0.1s ease-in-out, color 0.1s ease-in-out;
+  cursor: pointer;
 }
 
-.chipCard:hover {
+.chipCard:hover,
+.chipCard:active {
   background-color: var(--darkGreen);
   border-color: var(--darkGreen);
   color: var(--white);
 }
 
-.chipCard:active {
+.active {
   background-color: var(--darkGreen);
+  border-color: var(--darkGreen);
   color: var(--white);
 }
 
-.chipsWrapper {
-  margin-top: 30px;
-  width: 100%;
-  overflow-x: auto;
-}
+
 
 .chips {
   display: flex;
-  justify-content: center;    
+  justify-content: center;
 }
 
 /* Media query for smaller screens */
 @media only screen and (min-device-width: 428px) and (max-device-width: 926px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
   .chipsWrapper {
-    padding: 0 15px; 
+    padding: 0 20px; 
   }
 }
 
 /* Media query for larger screens */
 @media only screen and (min-width: 1024px) {
   .chipsWrapper {
-    padding-left: 40px; 
+    padding-left: 0 50px; 
   }
 }
