--- a/components/CreateEvents/CreateEvents.module.css
+++ b/components/CreateEvents/CreateEvents.module.css
@@ -8,7 +8,7 @@
     background-color: var(--paleGreen);
     justify-content: space-around;
     align-items: center;
-    margin-bottom: 50px;
+    margin-bottom: 60px;
   }
   
   .event {
@@ -56,6 +56,7 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    position: relative;
     margin-right: 20px;
 
   }
@@ -189,8 +190,143 @@
 
   /* Media query for smaller screens */
 @media only screen and (min-device-width: 428px) and (max-device-width: 926px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
-  
+    .createButton {
+        display: flex;
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        background-color: var(--darkGreen);
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        position: fixed;
+        right: 15px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+      }
+    
+      .createButton:hover {
+        background-color: var(--lightGreen);
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+      }
 
+      .overlaySidebar {
+        position: fixed;
+        bottom: 0;
+        right: 6%;
+        overflow: hidden;
+        transition: height 0.3s ease;
+      }
+      
+      .overlaySidebar.open {
+        height: 100vh;
+      }
+      
+      .overlaySidebarContent {
+        width: 377px;
+        height: 640px;
+        border-radius: 15px;
+        background-color: var(--midGreen);
+        /* padding: 20px; */
+        margin-left: 20px;
+      }
+      
+      .closeEvent {
+        width: 72px;
+        height: 10px;
+        background-color: var(--white);
+        border-radius: 15px;
+        cursor: pointer;
+      }
+      
+      .eventForm {
+        height: 640px;
+        display: flex;
+        flex-direction: column;
+        /* justify-content: space-around; */
+        align-items: center;
+      }
+      
+      .eventInfo {
+        width: 312px;
+        height: 76px;
+        border-radius: 10px;
+        padding: 10px;
+        background-color: var(--paleGreen);
+      }
+      
+      .eventInput {
+        background: none;
+        border: none;
+        outline: none;
+        width: 300px;
+        height: 20px;
+      }
+      
+      .divider {
+        width: 270px;
+        color: var(--midGreen);
+      }
+      
+      .eventDescription {
+        width: 312px;
+        height: 38px;
+        border-radius: 10px;
+        padding: 10px;
+        background-color: var(--paleGreen);
+        margin-top: 60px;
+      }
+      
+      .eventDateInfo {
+        width: 312px;
+        height: 142px;
+        padding: 10px;
+        border-radius: 10px;
+        margin-top: 60px;
+        background-color: var(--paleGreen);
+      }
+      
+      .eventLabelInput {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      
+      .eventLabelInput>label {
+        font-size: 14px;
+      }
+      
+      .eventTime {
+        width: 60px;
+        height: 28px;
+        background-color: blueviolet;
+        color: aquamarine;
+      }
+      
+      .head {
+        display: flex;
+        justify-content: space-between;
+        margin: 25px 35px;
+      }
+      
+      .newEventHeader {
+        color: var(--white);
+      }
+      
+      .createActive {
+        color: var(--white);
+        text-decoration: none;
+        cursor: pointer;
+      }
+      
+      .createActive:hover {
+        color: var(--darkGreen);
+        text-decoration: none;
+      }
+      
+      .createInactive {
+        color: var(--lightGreen);
+      }
+    
 
 }
 
@@ -221,7 +357,7 @@
         background-color: var(--paleGreen);
         justify-content: space-around;
         align-items: center;
-        margin-bottom: 5px;
+        margin-bottom: 15px;
         margin-left: 5px;
       }
       
@@ -254,11 +390,10 @@
         justify-content: center;
         cursor: pointer;
         position: fixed;
-        right: 630px;
-        margin-bottom: 15px;
+        margin-left: 330px;
+        bottom: 100px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
       }
-    
       .createButton:hover {
         background-color: var(--lightGreen);
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
