--- a/components/SearchBar/SearchBar.module.css
+++ b/components/SearchBar/SearchBar.module.css
@@ -12,29 +12,18 @@
   border-radius: 5px;
 }
 
-
 .searchIcon {
   width: 24px;
   height: 24px;
   position: absolute;
-  top: 63%;
+  top: 75px;
   left: 45px;
   transform: translateY(-50%);
   pointer-events: none;
 }
 
 /* Media query for smaller screens */
-@media only screen and (min-device-width: 428px) and (max-device-width: 926px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
-  .searchIcon {
-    width: 24px;
-    height: 24px;
-    position: absolute;
-    top: 76%;
-    left: 46px;
-    transform: translateY(-50%);
-    pointer-events: none;
-  }
-}
+@media only screen and (min-device-width: 428px) and (max-device-width: 926px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {}
 
 /* Media query for larger screens */
 @media only screen and (min-width: 1024px) {
@@ -43,23 +32,6 @@
     margin-top: 25px;
   }
 
-  .searchBarInput {
-    background-color: var(--clearButton);
-    width: 314px;
-    height: 45px;
-    margin-top: 50px;
-    padding-left: 30px;
-    border-radius: 5px;
-  }
 
-  .searchIcon {
-    width: 24px;
-    height: 24px;
-    position: absolute;
-    top: 76%;
-    left: 46px;
-    transform: translateY(-50%);
-    pointer-events: none;
-  }
 
 }
