--- a/styles/PageHome.module.css
+++ b/styles/PageHome.module.css
@@ -3,40 +3,50 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  max-height: 100vh;
   font-family: "Figtree", sans-serif;
+  position: relative;
 }
 
 .menuIcon {
-  position: absolute;
-  top: 40px;
-  right: 30px;
-  cursor: pointer;
+  position: fixed;
+  top: 30px;
+  margin-left: 150px;
   z-index: 100000;
+  cursor: pointer;
 }
 
 .container {
   margin: 0;
   text-align: center;
+  max-height: 2000px;
+  overflow: hidden;
 }
 
 .cards {
   margin-top: 5px;
-  margin-bottom: 50px;
+  margin-bottom: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
+.cards> :last-child {
+  margin-bottom: 50px;
+}
+
 .h3 {
+  font-size: 18px;
   text-align: left;
   margin-left: 35px;
-  margin-top: 50px;
+  margin-top: 40px;
 }
 
 .chipsWrapper {
-  margin-top: 30px;
-  width: 100%;
+  margin-top: 20px;
+  width: calc(100% - 70px);
+  padding: 0 35px;
   overflow-x: auto;
 }
 
@@ -46,40 +56,100 @@
 }
 
 .contentWrapper {
+  flex-grow: 1;
   width: 430px;
-  height: auto;
+  max-height: 932px;
   background-color: var(--white);
+  overflow-y: auto;
 }
 
-/* Media query for smaller screens */
+/* Media queries */
 @media only screen and (min-device-width: 428px) and (max-device-width: 926px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
-  .menuIcon {
-    position: fixed;
-    top: 30px;
-    right: 30px;
-    z-index: 100000;
+  .main {
+    max-height: 2100px;
+    overflow: hidden;
+  }
+
+  .chipsWrapper {
+    display: flex;
+    margin-left: 30px;
+    margin-top: 20px;
+    width: calc(100% - 70px);
+    padding-left: 45px;
+    overflow-x: auto;
+    justify-content: center;
+  }
+
+  .chips {
+    display: flex;
+    padding-left: 225px;
+    padding-right: 30px;
+    justify-content: center;
+  }
+
+  .contentWrapper {
+    width: 430px;
+    background-color: var(--white);
+    max-height: 2000px;
+    overflow-x: hidden;
+  }
+
+  .container {
+    margin: 0;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+
+  .cards {
+    margin-top: 5px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .cards> :last-child {
+    margin-bottom: 50px;
   }
 }
 
-/* Media query for larger screens */
 @media only screen and (min-width: 1024px) {
   .main {
     background: linear-gradient(to bottom, var(--lightYellow), var(--lightGreen));
     position: relative;
-    max-height: 5000px;
-    overflow-y: hidden;
+    max-height: 932px;
+    overflow: hidden;
   }
 
   .chipsWrapper {
-    max-width: 430px;
+    display: flex;
+    margin-left: 30px;
+    margin-top: 20px;
+    width: calc(100% - 70px);
+    padding-left: 45px;
     overflow-x: auto;
+    justify-content: center;
   }
 
-  .menuIcon {
-    position: fixed;
-    top: 30px;
-    right: 650px;
-    cursor: pointer;
-    z-index: 100000;
+  .chips {
+    display: flex;
+    padding-left: 225px;
+    padding-right: 30px;
+    justify-content: center;
+  }
+
+
+  .contentWrapper {
+    max-width: 430px;
+    position: relative;
+    max-height: 932px;
+    background-color: var(--white);
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+
+  .cards> :last-child {
+    margin-bottom: 30px;
   }
 }
