--- a/styles/PageMap.module.css
+++ b/styles/PageMap.module.css
@@ -3,70 +3,66 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    min-height: 60vh;
+    max-height: 100vh;
     font-family: "Figtree", sans-serif;
-    z-index: 1;
-}
-
-.menuIcon {
+    position: relative;
+  }
+  
+  .menuIcon {
     position: fixed;
-    top: 40px;
-    right: 30px;
-    max-width: 430px;
-    z-index: 1;
-}
+    top: 30px;
+    margin-left: 150px;
+    z-index: 100000;
+    cursor: pointer;
 
-.container {
+  }
+  
+  .container {
     margin: 0;
     text-align: center;
-    z-index: 1;
-}
+    max-height: 932px;
+    overflow: hidden;
+  }
 
-.contentWrapper {
+  .contentWrapper {
+    flex-grow: 1;
     width: 430px;
-    height: 932px;
+    max-height: 932px;
     background-color: var(--white);
-}
-
-/* Media query for smaller screens */
-@media only screen and (min-device-width: 428px) and (max-device-width: 926px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
+    overflow-y: auto;
+  }
+  
+  /* Media queries */
+  @media only screen and (min-device-width: 428px) and (max-device-width: 926px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
+  
     .contentWrapper {
-        max-width: 430px;
-        min-height: auto;
+      width: 430px;
+      background-color: var(--white);
+      max-height: 2000px;
     }
-
-    .menuIcon {
-        position: fixed;
-        top: 30px;
-        right: 30px;
-        z-index: 1;
+  
+    .container {
+      margin: 0;
+      text-align: center;
     }
-}
-
-/* Media query for larger screens */
-@media only screen and (min-width: 1024px) {
+  
+  }
+  
+  @media only screen and (min-width: 1024px) {
     .main {
-        background: linear-gradient(to bottom, var(--lightYellow), var(--lightGreen));
-        position: relative;
-        max-height: 932px;
-        overflow-y: hidden;
+      background: linear-gradient(to bottom, var(--lightYellow), var(--lightGreen));
+      position: relative;
+      max-height: 932px; 
+      overflow: hidden;
     }
-
-    .menuIcon {
-        position: absolute;
-        top: 30px;
-        right: 650px;
-        cursor: pointer;
-    }
-
+  
     .contentWrapper {
-        width: 430px;
+      max-width: 430px;
+      position: relative;
+      background-color: var(--white);
+      overflow-y: auto; 
     }
+  
 
-    .menuIcon {
-        position: fixed;
-        top: 30px;
-        right: 650px;
-        cursor: pointer;
-    }
-}
+  }
+  
