--- a/styles/Tutorial.module.css
+++ b/styles/Tutorial.module.css
@@ -12,11 +12,13 @@
   }
   
   /* Media query for smaller screens */
-  @media (max-width: 428px) {
+  @media only screen and (min-device-width: 428px) and (max-device-width: 926px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
     .main {
-      background-image: url("/images/landing-page.jpeg");
+      background-image: url('/images/landing-page.jpeg');
       background-size: cover;
       background-position: center top;
+      max-height: 932px;
+      max-width: 430px;
     }
   }
   
@@ -28,5 +30,6 @@
       background-repeat: no-repeat;
       background-position: center top, center;
       background-size: contain;
+      
     }
   }
