--- a/components/LargeButton/LargeButton.module.css
+++ b/components/LargeButton/LargeButton.module.css
@@ -1,17 +1,29 @@
 .largeButton {
-    padding: 15px 40px;
-    cursor: pointer;
-    border-radius: 10px;
-    background-color: var(--paleGreen);
-    border-color: var(--paleGreen);
-    color: var(--black);
-    transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
-    width: 300px;
-    height: 45px;
-  }
+  position: relative; 
+  width: 350px;
+  height: 50px;
+  background-color: var(--paleGreen);
+  border-radius: 14px;
+  text-align: left;
+  color: var(--black);
+  font-size: 18px;
+  font-weight: 300;
+  transition: background-color 0.3s ease;
+  border: 2px solid var(--paleGreen);
+  cursor: pointer;
+}
 
-  .largeButton:hover {
-    background-color: var(--lightGreen);
-    color: var(--black);
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
-  }
+.largeButton:hover {
+  background-color: var(--lightGreen);
+  border: 2px solid var(--paleGreen);
+}
+
+.arrow {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 20px;
+  color: var(--darkGreen);
+  z-index: 1; 
+}
