--- a/styles/Calendar.module.css
+++ b/styles/Calendar.module.css
@@ -3,20 +3,20 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  min-height: 60vh;
+  min-height: 100vh;
   font-family: "Figtree", sans-serif;
 }
 
 .container {
-  margin: 0 auto;
+  margin: 0;
   text-align: center;
 }
 
 .menuIcon {
-  position: absolute;
-  top: 40px;
-  right: 30px;
-  cursor: pointer;
+  position: fixed;
+  top: 30px;
+  margin-left: 150px;
+  z-index: 100000;
 }
 
 .heading {
@@ -35,20 +35,20 @@
 }
 
 .contentWrapper {
+  flex-grow: 1;
   width: 430px;
-  height: auto;
+  max-height: 932px; 
   background-color: var(--white);
-  overflow-y: auto;
-  margin-bottom: 20px;
+  overflow-y: auto; 
 }
-
 /* Media query for smaller screens */
-@media only screen and (max-width: 1024px) {
-  .menuIcon {
-    position: absolute;
-    top: 40px;
-    right: 30px;
+@media only screen and (min-device-width: 428px) and (max-device-width: 926px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
+  .main {
+    position: relative;
+    max-height: 932px;
+    overflow: hidden;
   }
+
 
   .heading {
     font-weight: 600;
@@ -65,7 +65,6 @@
     width: 100%;
     height: auto;
     overflow-y: auto;
-    margin-bottom: 20px;
   }
 }
 
@@ -75,12 +74,7 @@
     background: linear-gradient(to bottom, var(--lightYellow), var(--lightGreen));
     position: relative;
     max-height: 932px;
-    overflow-y: hidden;  
-  }
-
-  .menuIcon {
-    top: 30px;
-    right: 650px;
+    overflow: hidden;
   }
 
   .content {
@@ -90,10 +84,12 @@
 
   .contentWrapper {
     max-width: 430px;
+    min-height: 932px;
+    position: relative;
+    justify-content: center;
+    align-items: center;
     background-color: var(--white);
-    overflow-y: auto;
-    margin-bottom: 20px;
-    height: 100vh;
+    overflow-y: hidden;
   }
 
   .h3 {
