--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -1,77 +1,144 @@
 .main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 80vh;
-    font-family: "Figtree", sans-serif;
-}
-
-.container {
-    margin: 0;
-    text-align: center;
-}
-
-.contentWrapper {
-    width: 430px;
-    height: 932px;
-    background-color: var(--white);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  max-height: 100vh;
+  font-family: "Figtree", sans-serif;
+  position: relative;
 }
 
 .menuIcon {
-    position: absolute;
-    top: 40px;
-    right: 30px;
-    cursor: pointer;
-    z-index: 1;
+  position: fixed;
+  top: 30px;
+  margin-left: 150px;
+  z-index: 100000;
+  cursor: pointer;
+}
+
+.container {
+  margin: 0;
+  text-align: center;
+}
+
+.contentWrapper {
+  width: 430px;
+  height: 932px;
+  background-color: var(--white);
+  overflow-y: auto;
+}
+
+.profileImgWrapper {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .profileImg {
-    border-radius: 50%;
-    margin-top: 3rem;
-    margin-bottom: 1rem;
+  border-radius: 50%;
+  margin-top: 3rem;
+  margin-bottom: 1rem;
+}
+
+.editIcon {
+  position: absolute;
+  cursor: pointer;
+  font-size: large;
+  top: 160px;
+  right: -10px;
+}
+
+.fileInput {
+  display: none;
 }
 
 .profileCont {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 3rem;
+  gap: 30px;
+}
+
+.profileImg {
+  width: 150px;
 }
 
 .lgBtnCont {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1rem;
+  gap: 30px;
 }
 
-/* Media query for smaller screens */
+.lgBtn {
+  padding-left: 20px;
+}
+
+
+
+.toggleContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.toggleItem {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.toggleLabel {
+  font-size: 1.2em;
+  margin-right: 30px;
+  max-width: 60px;
+}
+
+.switch {
+  display: flex;
+  align-items: center;
+  max-width: 40px;
+}
+
+.switchLabel {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  font-size: 0.8em;
+  color: var(--white);
+  border-radius: 50%;
+  padding: 0 5px;
+}
+
+
+/* Media queries */
 @media only screen and (min-device-width: 428px) and (max-device-width: 926px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
-    .menuIcon {
-        position: fixed;
-        top: 30px;
-        right: 30px;
-        z-index: 1;
-    }
+  .main {
+    max-height: 932px;
+    overflow: hidden;
+  }
 }
 
-/* Media query for larger screens */
 @media only screen and (min-width: 1024px) {
-    .main {
-        background: linear-gradient(to bottom, var(--lightYellow), var(--lightGreen));
-        position: relative;
-    }
+  .main {
+    background: linear-gradient(to bottom, var(--lightYellow), var(--lightGreen));
+    position: relative;
+    max-height: 932px;
+    overflow: hidden;
+  }
 
-    .menuIcon {
-        position: fixed;
-        top: 30px;
-        right: 650px;
-        cursor: pointer;
-        z-index: 1;
-    }
+  .contentWrapper {
+    max-width: 430px;
+    position: relative;
+    max-height: 932px;
+    background-color: var(--white);
+    overflow-y: auto;
+  }
+
+
 }
